--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "devDependencies": {
     "cypress": "^12.5.0"
-  }
+  },
+  "scripts": {
+    "cy:verify": "cypress verify",
+    "cy:info": "cypress info"
+  },
 }
